# bempp

./: CMakeLists.txt  prepare.py
cmake/: BemppFindDependencies.cmake  BemppOptions.cmake  trilinos_headers.cmake
contrib/: CMakeLists.txt
contrib/cmake/: dune.cmake  trilinos.cmake
contrib/dune/: CMakeLists.txt
contrib/files/: README
contrib/patch/cmake/: trilinos.cmake
installer/py_modules/: tools.py
lib/: CMakeLists.txt
lib/assembly/: aca_options.hpp  assembled_potential_operator.hpp  grid_function.cpp  helmholtz_3d_osrc_dtn_operator.cpp  helmholtz_3d_osrc_dtn_operator.hpp  laplace_3d_synthetic_boundary_operator_builder.hpp  modified_helmholtz_3d_synthetic_boundary_operator_builder.hpp
lib/fiber/: default_local_assembler_for_operators_on_surfaces_utilities.hpp
lib/grid/: index_set.hpp
lib/space/: space.hpp
