# Set Cache Variables

#IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
#  SET(CMAKE_INSTALL_PREFIX
#    "${CMAKE_SOURCE_DIR}" CACHE PATH "Install prefix" FORCE
#    )
#ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dune)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/trilinos.cmake)
